// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`visual regression > bedroom-closet renders consistently 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 1246.17" width="1200" height="1246.17">
<rect x="0" y="0" width="1200" height="1246.17" fill="white"/>
<g class="layer-structural">
<g class="walls">
<rect x="170.75" y="170.75" width="858.5" height="30.83" stroke="none" fill="#000"/>
<g fill="#000" stroke="none">
<rect x="170.75" y="884.58" width="315.42" height="30.83"/>
<rect x="656.92" y="884.58" width="372.33" height="30.83"/>
</g>
<g fill="#000" stroke="none">
<rect x="998.42" y="656.92" width="30.83" height="227.67"/>
<rect x="998.42" y="201.58" width="30.83" height="227.67"/>
</g>
<rect x="170.75" y="201.58" width="30.83" height="683" stroke="none" fill="#000"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="656.92" y1="915.42" x2="656.92" y2="744.66"/>
<path d="M 656.92,744.66 A 170.75,170.75 0 0,0 486.17,915.42"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="1006.13" y1="656.92" x2="1006.13" y2="429.25"/>
<line x1="1021.54" y1="656.92" x2="1021.54" y2="429.25"/>
</g>
<g class="enclosure-walls" id="enclosure-closet">
<g fill="#333" stroke="none">
<rect x="407.91" y="486.17" width="21.34" height="56.92"/>
<rect x="407.91" y="201.58" width="21.34" height="142.29"/>
</g>
<rect x="201.58" y="521.74" width="227.67" height="21.34" stroke="none" fill="#333"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="407.91" y1="486.17" x2="265.61" y2="486.17"/>
<path d="M 265.61,486.17 A 142.29,142.29 0 0,1 407.91,343.87"/>
</g>
</g>
<g class="layer-labels">
<text x="600" y="543.08" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="28.46" font-weight="500" text-anchor="middle" dominant-baseline="central">Primary Bedroom</text>
<text x="315.42" y="372.33" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="28.46" font-weight="500" text-anchor="middle" dominant-baseline="central">Walk-in Closet</text>
</g>
<g class="layer-dimensions">
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="201.58" y1="998.42" x2="998.42" y2="998.42"/>
<line x1="193.04" y1="1006.96" x2="210.12" y2="989.88"/>
<line x1="989.88" y1="1006.96" x2="1006.96" y2="989.88"/>
<text x="600" y="984.19" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="19.92" text-anchor="middle">14&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="87.75" y1="884.58" x2="87.75" y2="201.58"/>
<line x1="79.21" y1="893.12" x2="96.28" y2="876.05"/>
<line x1="79.21" y1="210.12" x2="96.28" y2="193.04"/>
<text x="73.52" y="543.08" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="19.92" text-anchor="middle" transform="rotate(-90, 73.52, 543.08)">12&apos;-0&quot;</text>
</g>
</g>
<g class="layer-title-block">
<g class="title-block" font-family="'Helvetica','Arial',sans-serif" fill="#000">
<rect x="830" y="1086.17" width="350" height="140" stroke="#000" stroke-width="0.50" fill="white"/>
<line x1="830" y1="1176.17" x2="1180" y2="1176.17" stroke="#000" stroke-width="0.35"/>
<text x="842" y="1110.17" font-size="18" font-weight="bold">Bedroom with Closet</text>
<text x="842" y="1214.17" font-size="12">Scale: 1/4in = 1ft</text>
<text x="1015" y="1214.17" fill="#666" font-size="10">FloorScript v0.1</text>
</g>
</g>
</svg>"
`;

exports[`visual regression > bedroom-nook renders consistently 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 1246.17" width="1200" height="1246.17">
<rect x="0" y="0" width="1200" height="1246.17" fill="white"/>
<g class="layer-structural">
<g class="walls">
<g fill="#000" stroke="none">
<rect x="170.75" y="170.75" width="429.25" height="30.83"/>
<rect x="884.58" y="170.75" width="144.66" height="30.83"/>
</g>
<g fill="#000" stroke="none">
<rect x="170.75" y="884.58" width="144.66" height="30.83"/>
<rect x="486.17" y="884.58" width="543.08" height="30.83"/>
</g>
<g fill="#000" stroke="none">
<rect x="998.42" y="656.92" width="30.83" height="227.67"/>
<rect x="998.42" y="201.58" width="30.83" height="227.67"/>
</g>
<rect x="170.75" y="201.58" width="30.83" height="683" stroke="none" fill="#000"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="486.17" y1="915.42" x2="486.17" y2="744.66"/>
<path d="M 486.17,744.66 A 170.75,170.75 0 0,0 315.42,915.42"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="1006.13" y1="656.92" x2="1006.13" y2="429.25"/>
<line x1="1021.54" y1="656.92" x2="1021.54" y2="429.25"/>
</g>
<g class="enclosure-walls" id="enclosure-closet">
<g fill="#333" stroke="none">
<rect x="407.91" y="486.17" width="21.34" height="56.92"/>
<rect x="407.91" y="201.58" width="21.34" height="142.29"/>
</g>
<rect x="201.58" y="521.74" width="227.67" height="21.34" stroke="none" fill="#333"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="407.91" y1="486.17" x2="265.61" y2="486.17"/>
<path d="M 265.61,486.17 A 142.29,142.29 0 0,1 407.91,343.87"/>
</g>
<g class="extension-walls" id="extension-window-nook">
<g fill="#000" stroke="none">
<rect x="569.17" y="0" width="59.29" height="30.83"/>
<rect x="856.13" y="0" width="59.29" height="30.83"/>
</g>
<rect x="884.58" y="30.83" width="30.83" height="170.75" stroke="none" fill="#000"/>
<rect x="569.17" y="30.83" width="30.83" height="170.75" stroke="none" fill="#000"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="628.46" y1="7.71" x2="856.13" y2="7.71"/>
<line x1="628.46" y1="23.12" x2="856.13" y2="23.12"/>
</g>
</g>
<g class="layer-labels">
<text x="600" y="543.08" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="28.46" font-weight="500" text-anchor="middle" dominant-baseline="central">Primary Bedroom</text>
<text x="315.42" y="372.33" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="28.46" font-weight="500" text-anchor="middle" dominant-baseline="central">Walk-in Closet</text>
<text x="742.29" y="116.21" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="28.46" font-weight="500" text-anchor="middle" dominant-baseline="central">Window Nook</text>
</g>
<g class="layer-dimensions">
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="201.58" y1="998.42" x2="998.42" y2="998.42"/>
<line x1="193.04" y1="1006.96" x2="210.12" y2="989.88"/>
<line x1="989.88" y1="1006.96" x2="1006.96" y2="989.88"/>
<text x="600" y="984.19" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="19.92" text-anchor="middle">14&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="87.75" y1="884.58" x2="87.75" y2="201.58"/>
<line x1="79.21" y1="893.12" x2="96.28" y2="876.05"/>
<line x1="79.21" y1="210.12" x2="96.28" y2="193.04"/>
<text x="73.52" y="543.08" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="19.92" text-anchor="middle" transform="rotate(-90, 73.52, 543.08)">12&apos;-0&quot;</text>
</g>
</g>
<g class="layer-title-block">
<g class="title-block" font-family="'Helvetica','Arial',sans-serif" fill="#000">
<rect x="830" y="1086.17" width="350" height="140" stroke="#000" stroke-width="0.50" fill="white"/>
<line x1="830" y1="1176.17" x2="1180" y2="1176.17" stroke="#000" stroke-width="0.35"/>
<text x="842" y="1110.17" font-size="18" font-weight="bold">Bedroom with Closet and Window Nook</text>
<text x="842" y="1214.17" font-size="12">Scale: 1/4in = 1ft</text>
<text x="1015" y="1214.17" fill="#666" font-size="10">FloorScript v0.1</text>
</g>
</g>
</svg>"
`;

exports[`visual regression > kitchen-reno existing plan renders consistently 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 1232.85" width="1200" height="1232.85">
<rect x="0" y="0" width="1200" height="1232.85" fill="white"/>
<g class="layer-structural">
<g class="walls">
<rect x="190.73" y="190.73" width="818.54" height="31.79" stroke="none" fill="#000"/>
<rect x="190.73" y="858.28" width="818.54" height="23.84" stroke="none" fill="#333"/>
<rect x="985.43" y="222.52" width="23.84" height="635.76" stroke="none" fill="#333"/>
<g fill="#000" stroke="none">
<rect x="190.73" y="667.55" width="31.79" height="190.73"/>
<rect x="190.73" y="222.52" width="31.79" height="190.73"/>
</g>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="198.68" y1="667.55" x2="198.68" y2="413.25"/>
<line x1="214.57" y1="667.55" x2="214.57" y2="413.25"/>
</g>
</g>
<g class="layer-labels">
<text x="603.97" y="540.4" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="31.79" font-weight="500" text-anchor="middle" dominant-baseline="central">Kitchen</text>
</g>
<g class="layer-dimensions">
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="222.52" y1="985.43" x2="985.43" y2="985.43"/>
<line x1="212.98" y1="994.97" x2="232.05" y2="975.89"/>
<line x1="975.89" y1="994.97" x2="994.97" y2="975.89"/>
<text x="603.97" y="969.54" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="22.25" text-anchor="middle">12&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="95.36" y1="858.28" x2="95.36" y2="222.52"/>
<line x1="85.83" y1="867.81" x2="104.9" y2="848.74"/>
<line x1="85.83" y1="232.05" x2="104.9" y2="212.98"/>
<text x="79.47" y="540.4" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="22.25" text-anchor="middle" transform="rotate(-90, 79.47, 540.4)">10&apos;-0&quot;</text>
</g>
</g>
<g class="layer-title-block">
<g class="title-block" font-family="'Helvetica','Arial',sans-serif" fill="#000">
<rect x="830" y="1072.85" width="350" height="140" stroke="#000" stroke-width="0.50" fill="white"/>
<line x1="830" y1="1162.85" x2="1180" y2="1162.85" stroke="#000" stroke-width="0.35"/>
<text x="842" y="1096.85" font-size="18" font-weight="bold">Kitchen Renovation - 123 Main St</text>
<text x="842" y="1118.85" font-size="13">123 Main Street, Anytown, ST 12345</text>
<text x="842" y="1138.85" font-size="13">Jane Smith</text>
<text x="842" y="1182.85" font-size="12">Sheet: A1</text>
<text x="1015" y="1182.85" font-size="12">Date: 2026-02-11</text>
<text x="842" y="1200.85" font-size="12">Scale: 1/4in = 1ft</text>
<text x="1015" y="1200.85" fill="#666" font-size="10">FloorScript v0.1</text>
</g>
</g>
</svg>"
`;

exports[`visual regression > kitchen-reno proposed plan renders consistently 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 1232.85" width="1200" height="1232.85">
<rect x="0" y="0" width="1200" height="1232.85" fill="white"/>
<g class="layer-structural">
<g class="walls">
<rect x="190.73" y="190.73" width="818.54" height="31.79" stroke="none" fill="#000"/>
<rect x="190.73" y="858.28" width="818.54" height="23.84" stroke="none" fill="#333"/>
<rect x="985.43" y="731.13" width="23.84" height="127.15" stroke="none" fill="#333"/>
<g fill="#000" stroke="none">
<rect x="190.73" y="667.55" width="31.79" height="190.73"/>
<rect x="190.73" y="222.52" width="31.79" height="190.73"/>
</g>
</g>
<g class="opening cased-opening" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="985.43" y1="731.13" x2="1009.27" y2="731.13"/>
<line x1="985.43" y1="731.13" x2="985.43" y2="766.89"/>
<line x1="1009.27" y1="731.13" x2="1009.27" y2="766.89"/>
<line x1="985.43" y1="222.52" x2="1009.27" y2="222.52"/>
<line x1="985.43" y1="222.52" x2="985.43" y2="186.75"/>
<line x1="1009.27" y1="222.52" x2="1009.27" y2="186.75"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="198.68" y1="667.55" x2="198.68" y2="413.25"/>
<line x1="214.57" y1="667.55" x2="214.57" y2="413.25"/>
</g>
</g>
<g class="layer-labels">
<text x="603.97" y="540.4" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="31.79" font-weight="500" text-anchor="middle" dominant-baseline="central">Kitchen</text>
</g>
<g class="layer-dimensions">
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="222.52" y1="985.43" x2="985.43" y2="985.43"/>
<line x1="212.98" y1="994.97" x2="232.05" y2="975.89"/>
<line x1="975.89" y1="994.97" x2="994.97" y2="975.89"/>
<text x="603.97" y="969.54" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="22.25" text-anchor="middle">12&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="95.36" y1="858.28" x2="95.36" y2="222.52"/>
<line x1="85.83" y1="867.81" x2="104.9" y2="848.74"/>
<line x1="85.83" y1="232.05" x2="104.9" y2="212.98"/>
<text x="79.47" y="540.4" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="22.25" text-anchor="middle" transform="rotate(-90, 79.47, 540.4)">10&apos;-0&quot;</text>
</g>
</g>
<g class="layer-title-block">
<g class="title-block" font-family="'Helvetica','Arial',sans-serif" fill="#000">
<rect x="830" y="1072.85" width="350" height="140" stroke="#000" stroke-width="0.50" fill="white"/>
<line x1="830" y1="1162.85" x2="1180" y2="1162.85" stroke="#000" stroke-width="0.35"/>
<text x="842" y="1096.85" font-size="18" font-weight="bold">Kitchen Renovation - 123 Main St</text>
<text x="842" y="1118.85" font-size="13">123 Main Street, Anytown, ST 12345</text>
<text x="842" y="1138.85" font-size="13">Jane Smith</text>
<text x="842" y="1182.85" font-size="12">Sheet: A1</text>
<text x="1015" y="1182.85" font-size="12">Date: 2026-02-11</text>
<text x="842" y="1200.85" font-size="12">Scale: 1/4in = 1ft</text>
<text x="1015" y="1200.85" fill="#666" font-size="10">FloorScript v0.1</text>
</g>
</g>
</svg>"
`;

exports[`visual regression > multi-room renders consistently 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 1411.63" width="1200" height="1411.63">
<rect x="0" y="0" width="1200" height="1411.63" fill="white"/>
<g class="layer-structural">
<g class="walls">
<g fill="#333" stroke="none">
<rect x="733.95" y="813.49" width="12.56" height="133.95"/>
<rect x="733.95" y="478.6" width="12.56" height="133.95"/>
</g>
<g fill="#333" stroke="none">
<rect x="533.02" y="466.05" width="33.49" height="12.56"/>
<rect x="700.47" y="466.05" width="33.49" height="12.56"/>
</g>
<rect x="131.16" y="466.05" width="389.3" height="12.56" stroke="none" fill="#333"/>
<g fill="#333" stroke="none">
<rect x="131.16" y="947.44" width="33.49" height="18.14"/>
<rect x="248.37" y="947.44" width="83.72" height="18.14"/>
<rect x="432.56" y="947.44" width="66.98" height="18.14"/>
</g>
<rect x="746.51" y="466.05" width="334.88" height="12.56" stroke="none" fill="#333"/>
<rect x="520.47" y="365.58" width="12.56" height="16.74" stroke="none" fill="#333"/>
<g fill="#333" stroke="none">
<rect x="533.02" y="353.02" width="33.49" height="12.56"/>
<rect x="650.23" y="353.02" width="83.72" height="12.56"/>
</g>
<rect x="733.95" y="365.58" width="12.56" height="16.74" stroke="none" fill="#333"/>
<rect x="520.47" y="131.16" width="12.56" height="251.16" stroke="none" fill="#333"/>
<rect x="733.95" y="131.16" width="12.56" height="251.16" stroke="none" fill="#333"/>
<rect x="520.47" y="466.05" width="12.56" height="12.56" stroke="none" fill="#333"/>
<g fill="#000" stroke="none">
<rect x="298.6" y="947.44" width="33.49" height="18.14"/>
<rect x="432.56" y="947.44" width="66.98" height="18.14"/>
<rect x="633.49" y="947.44" width="100.47" height="18.14"/>
</g>
<rect x="118.6" y="466.05" width="12.56" height="12.56" stroke="none" fill="#333"/>
<rect x="520.47" y="353.02" width="12.56" height="12.56" stroke="none" fill="#333"/>
<rect x="733.95" y="118.6" width="12.56" height="12.56" stroke="none" fill="#333"/>
<rect x="520.47" y="118.6" width="12.56" height="12.56" stroke="none" fill="#333"/>
<rect x="733.95" y="353.02" width="12.56" height="12.56" stroke="none" fill="#333"/>
<g fill="#000" stroke="none">
<rect x="113.02" y="813.49" width="18.14" height="143.02"/>
<rect x="113.02" y="466.05" width="18.14" height="180"/>
</g>
<g fill="#000" stroke="none">
<rect x="733.95" y="947.44" width="113.02" height="18.14"/>
<rect x="980.93" y="947.44" width="118.6" height="18.14"/>
</g>
<g fill="#000" stroke="none">
<rect x="1081.4" y="813.49" width="18.14" height="152.09"/>
<rect x="1081.4" y="466.05" width="18.14" height="180"/>
</g>
<g fill="#000" stroke="none">
<rect x="100.47" y="113.02" width="219.07" height="18.14"/>
<rect x="453.49" y="113.02" width="79.53" height="18.14"/>
</g>
<g fill="#000" stroke="none">
<rect x="100.47" y="449.3" width="18.14" height="29.3"/>
<rect x="100.47" y="131.16" width="18.14" height="217.67"/>
</g>
<rect x="520.47" y="100.47" width="226.05" height="18.14" stroke="none" fill="#000"/>
<g fill="#000" stroke="none">
<rect x="733.95" y="113.02" width="46.05" height="18.14"/>
<rect x="913.95" y="113.02" width="185.58" height="18.14"/>
</g>
<g fill="#000" stroke="none">
<rect x="1081.4" y="432.56" width="18.14" height="46.05"/>
<rect x="1081.4" y="131.16" width="18.14" height="200.93"/>
</g>
<rect x="113.02" y="1133.02" width="198.14" height="18.14" stroke="none" fill="#000"/>
<rect x="298.6" y="956.51" width="12.56" height="176.51" stroke="none" fill="#333"/>
<rect x="113.02" y="947.44" width="18.14" height="185.58" stroke="none" fill="#000"/>
</g>
<g class="opening cased-opening" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="733.95" y1="813.49" x2="746.51" y2="813.49"/>
<line x1="733.95" y1="813.49" x2="733.95" y2="832.33"/>
<line x1="746.51" y1="813.49" x2="746.51" y2="832.33"/>
<line x1="733.95" y1="612.56" x2="746.51" y2="612.56"/>
<line x1="733.95" y1="612.56" x2="733.95" y2="593.72"/>
<line x1="746.51" y1="612.56" x2="746.51" y2="593.72"/>
</g>
<g class="opening cased-opening" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="566.51" y1="466.05" x2="566.51" y2="478.6"/>
<line x1="566.51" y1="466.05" x2="547.67" y2="466.05"/>
<line x1="566.51" y1="478.6" x2="547.67" y2="478.6"/>
<line x1="700.47" y1="466.05" x2="700.47" y2="478.6"/>
<line x1="700.47" y1="466.05" x2="719.3" y2="466.05"/>
<line x1="700.47" y1="478.6" x2="719.3" y2="478.6"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="432.56" y1="965.58" x2="432.56" y2="865.12"/>
<path d="M 432.56,865.12 A 100.47,100.47 0 0,0 332.09,965.58"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="499.53" y1="951.98" x2="633.49" y2="951.98"/>
<line x1="499.53" y1="961.05" x2="633.49" y2="961.05"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="164.65" y1="965.58" x2="164.65" y2="1049.3"/>
<path d="M 164.65,1049.3 A 83.72,83.72 0 0,0 248.37,965.58"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="520.47" y1="466.05" x2="436.74" y2="466.05"/>
<path d="M 436.74,466.05 A 83.72,83.72 0 0,1 520.47,382.33"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="566.51" y1="365.58" x2="566.51" y2="281.86"/>
<path d="M 566.51,281.86 A 83.72,83.72 0 0,1 650.23,365.58"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="733.95" y1="466.05" x2="817.67" y2="466.05"/>
<path d="M 817.67,466.05 A 83.72,83.72 0 0,0 733.95,382.33"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="520.47" y1="466.05" x2="436.74" y2="466.05"/>
<path d="M 436.74,466.05 A 83.72,83.72 0 0,1 520.47,382.33"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="733.95" y1="466.05" x2="817.67" y2="466.05"/>
<path d="M 817.67,466.05 A 83.72,83.72 0 0,0 733.95,382.33"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="432.56" y1="965.58" x2="432.56" y2="865.12"/>
<path d="M 432.56,865.12 A 100.47,100.47 0 0,0 332.09,965.58"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="499.53" y1="951.98" x2="633.49" y2="951.98"/>
<line x1="499.53" y1="961.05" x2="633.49" y2="961.05"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="117.56" y1="813.49" x2="117.56" y2="646.05"/>
<line x1="126.63" y1="813.49" x2="126.63" y2="646.05"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="846.98" y1="951.98" x2="980.93" y2="951.98"/>
<line x1="846.98" y1="961.05" x2="980.93" y2="961.05"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="319.53" y1="117.56" x2="453.49" y2="117.56"/>
<line x1="319.53" y1="126.63" x2="453.49" y2="126.63"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="105" y1="449.3" x2="105" y2="348.84"/>
<line x1="114.07" y1="449.3" x2="114.07" y2="348.84"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="780" y1="117.56" x2="913.95" y2="117.56"/>
<line x1="780" y1="126.63" x2="913.95" y2="126.63"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="1085.93" y1="432.56" x2="1085.93" y2="332.09"/>
<line x1="1095" y1="432.56" x2="1095" y2="332.09"/>
</g>
<g class="extension-walls" id="extension-bay-window">
<rect x="1081.4" y="627.91" width="83.72" height="18.14" stroke="none" fill="#000"/>
<rect x="1081.4" y="813.49" width="83.72" height="18.14" stroke="none" fill="#000"/>
<g fill="#000" stroke="none">
<rect x="1165.12" y="796.74" width="18.14" height="34.88"/>
<rect x="1165.12" y="627.91" width="18.14" height="34.88"/>
</g>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="1169.65" y1="796.74" x2="1169.65" y2="662.79"/>
<line x1="1178.72" y1="796.74" x2="1178.72" y2="662.79"/>
</g>
<g class="enclosure-walls" id="enclosure-closet1">
<g fill="#333" stroke="none">
<rect x="240" y="248.37" width="12.56" height="83.72"/>
<rect x="240" y="131.16" width="12.56" height="33.49"/>
</g>
<rect x="118.6" y="319.53" width="133.95" height="12.56" stroke="none" fill="#333"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="240" y1="248.37" x2="156.28" y2="248.37"/>
<path d="M 156.28,248.37 A 83.72,83.72 0 0,1 240,164.65"/>
</g>
<g class="enclosure-walls" id="enclosure-closet2">
<g fill="#333" stroke="none">
<rect x="964.19" y="248.37" width="12.56" height="50.23"/>
<rect x="964.19" y="131.16" width="12.56" height="16.74"/>
</g>
<rect x="964.19" y="286.05" width="117.21" height="12.56" stroke="none" fill="#333"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="964.19" y1="147.91" x2="1064.65" y2="147.91"/>
<path d="M 1064.65,147.91 A 100.47,100.47 0 0,1 964.19,248.37"/>
</g>
</g>
<g class="layer-labels">
<text x="432.56" y="713.02" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="16.74" font-weight="500" text-anchor="middle" dominant-baseline="central">Living Room</text>
<text x="913.95" y="713.02" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="16.74" font-weight="500" text-anchor="middle" dominant-baseline="central">Kitchen</text>
<text x="1123.26" y="729.77" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="16.74" font-weight="500" text-anchor="middle" dominant-baseline="central">Bay Window</text>
<text x="633.49" y="415.81" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="16.74" font-weight="500" text-anchor="middle" dominant-baseline="central">Hall</text>
<text x="319.53" y="298.6" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="16.74" font-weight="500" text-anchor="middle" dominant-baseline="central">Bedroom 1</text>
<text x="185.58" y="231.63" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="16.74" font-weight="500" text-anchor="middle" dominant-baseline="central">Walk-in Closet</text>
<text x="633.49" y="235.81" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="16.74" font-weight="500" text-anchor="middle" dominant-baseline="central">Full Bath</text>
<text x="913.95" y="298.6" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="16.74" font-weight="500" text-anchor="middle" dominant-baseline="central">Bedroom 2</text>
<text x="1022.79" y="214.88" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="16.74" font-weight="500" text-anchor="middle" dominant-baseline="central">Closet</text>
<text x="214.88" y="1049.3" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="16.74" font-weight="500" text-anchor="middle" dominant-baseline="central">Half Bath</text>
</g>
<g class="layer-dimensions">
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="131.16" y1="411.63" x2="733.95" y2="411.63"/>
<line x1="126.14" y1="416.65" x2="136.19" y2="406.6"/>
<line x1="728.93" y1="416.65" x2="738.98" y2="406.6"/>
<text x="432.56" y="403.26" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle">18&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="64.19" y1="947.44" x2="64.19" y2="478.6"/>
<line x1="59.16" y1="952.47" x2="69.21" y2="942.42"/>
<line x1="59.16" y1="483.63" x2="69.21" y2="473.58"/>
<text x="55.81" y="713.02" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle" transform="rotate(-90, 55.81, 713.02)">14&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="746.51" y1="1014.42" x2="1081.4" y2="1014.42"/>
<line x1="741.49" y1="1019.44" x2="751.53" y2="1009.4"/>
<line x1="1076.37" y1="1019.44" x2="1086.42" y2="1009.4"/>
<text x="913.95" y="1006.05" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle">10&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="1148.37" y1="947.44" x2="1148.37" y2="478.6"/>
<line x1="1143.35" y1="952.47" x2="1153.4" y2="942.42"/>
<line x1="1143.35" y1="483.63" x2="1153.4" y2="473.58"/>
<text x="1140" y="713.02" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle" transform="rotate(-90, 1140, 713.02)">14&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="533.02" y1="298.6" x2="733.95" y2="298.6"/>
<line x1="528" y1="303.63" x2="538.05" y2="293.58"/>
<line x1="728.93" y1="303.63" x2="738.98" y2="293.58"/>
<text x="633.49" y="290.23" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle">6&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="800.93" y1="466.05" x2="800.93" y2="365.58"/>
<line x1="795.91" y1="471.07" x2="805.95" y2="461.02"/>
<line x1="795.91" y1="370.6" x2="805.95" y2="360.56"/>
<text x="792.56" y="415.81" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle" transform="rotate(-90, 792.56, 415.81)">3&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="118.6" y1="64.19" x2="520.47" y2="64.19"/>
<line x1="113.58" y1="69.21" x2="123.63" y2="59.16"/>
<line x1="515.44" y1="69.21" x2="525.49" y2="59.16"/>
<text x="319.53" y="55.81" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle">12&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="51.63" y1="466.05" x2="51.63" y2="131.16"/>
<line x1="46.6" y1="471.07" x2="56.65" y2="461.02"/>
<line x1="46.6" y1="136.19" x2="56.65" y2="126.14"/>
<text x="43.26" y="298.6" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle" transform="rotate(-90, 43.26, 298.6)">10&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="533.02" y1="51.63" x2="733.95" y2="51.63"/>
<line x1="528" y1="56.65" x2="538.05" y2="46.6"/>
<line x1="728.93" y1="56.65" x2="738.98" y2="46.6"/>
<text x="633.49" y="43.26" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle">6&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="800.93" y1="353.02" x2="800.93" y2="118.6"/>
<line x1="795.91" y1="358.05" x2="805.95" y2="348"/>
<line x1="795.91" y1="123.63" x2="805.95" y2="113.58"/>
<text x="792.56" y="235.81" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle" transform="rotate(-90, 792.56, 235.81)">7&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="746.51" y1="64.19" x2="1081.4" y2="64.19"/>
<line x1="741.49" y1="69.21" x2="751.53" y2="59.16"/>
<line x1="1076.37" y1="69.21" x2="1086.42" y2="59.16"/>
<text x="913.95" y="55.81" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle">10&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="1148.37" y1="466.05" x2="1148.37" y2="131.16"/>
<line x1="1143.35" y1="471.07" x2="1153.4" y2="461.02"/>
<line x1="1143.35" y1="136.19" x2="1153.4" y2="126.14"/>
<text x="1140" y="298.6" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle" transform="rotate(-90, 1140, 298.6)">10&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="131.16" y1="1200" x2="298.6" y2="1200"/>
<line x1="126.14" y1="1205.02" x2="136.19" y2="1194.98"/>
<line x1="293.58" y1="1205.02" x2="303.63" y2="1194.98"/>
<text x="214.88" y="1191.63" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle">5&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="64.19" y1="1133.02" x2="64.19" y2="965.58"/>
<line x1="59.16" y1="1138.05" x2="69.21" y2="1128"/>
<line x1="59.16" y1="970.6" x2="69.21" y2="960.56"/>
<text x="55.81" y="1049.3" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle" transform="rotate(-90, 55.81, 1049.3)">5&apos;-0&quot;</text>
</g>
</g>
<g class="layer-electrical">
<g class="electrical">
<g class="electrical-panel">
<rect x="750.7" y="888.84" width="33.49" height="50.23" stroke="#000" stroke-width="0.4mm" fill="#fff"/>
<text x="767.44" y="906.42" fill="#000" font-family="sans-serif" font-size="7.37" font-weight="bold" text-anchor="middle" dominant-baseline="central">PANEL</text>
<text x="767.44" y="924" fill="#000" font-family="sans-serif" font-size="6.03" text-anchor="middle" dominant-baseline="central">200A</text>
<text x="767.44" y="944.09" fill="#666" font-family="sans-serif" font-size="5.36" text-anchor="middle" dominant-baseline="hanging">Main Panel</text>
</g>
<polyline points="767.44,913.95 432.56,913.95 432.56,713.02" stroke="#333" stroke-width="0.25mm" fill="none"/>
<polyline points="767.44,913.95 901.4,913.95 901.4,713.02" stroke="#333" stroke-width="0.25mm" fill="none"/>
<g class="outlet outlet-duplex">
<circle cx="466.05" cy="956.51" r="11.72" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<line x1="457.84" y1="952.41" x2="474.25" y2="952.41" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="457.84" y1="960.61" x2="474.25" y2="960.61" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="outlet outlet-duplex">
<circle cx="122.09" cy="646.05" r="11.72" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<line x1="113.89" y1="641.94" x2="130.3" y2="641.94" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="113.89" y1="650.15" x2="130.3" y2="650.15" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="outlet outlet-gfci">
<circle cx="846.98" cy="956.51" r="11.72" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="846.98" y="973.26" fill="#000" font-size="8.2" text-anchor="middle" dominant-baseline="hanging">GFI</text>
</g>
<g class="outlet outlet-gfci">
<circle cx="913.95" cy="472.33" r="11.72" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="913.95" y="489.07" fill="#000" font-size="8.2" text-anchor="middle" dominant-baseline="hanging">GFI</text>
</g>
<g class="outlet outlet-duplex">
<circle cx="319.53" cy="122.09" r="11.72" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<line x1="311.33" y1="117.99" x2="327.74" y2="117.99" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="311.33" y1="126.2" x2="327.74" y2="126.2" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="outlet outlet-duplex">
<circle cx="109.53" cy="399.07" r="11.72" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<line x1="101.33" y1="394.97" x2="117.74" y2="394.97" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="101.33" y1="403.17" x2="117.74" y2="403.17" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="outlet outlet-duplex">
<circle cx="913.95" cy="122.09" r="11.72" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<line x1="905.75" y1="117.99" x2="922.16" y2="117.99" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="905.75" y1="126.2" x2="922.16" y2="126.2" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="outlet outlet-duplex">
<circle cx="1090.47" cy="365.58" r="11.72" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<line x1="1082.26" y1="361.48" x2="1098.67" y2="361.48" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="1082.26" y1="369.68" x2="1098.67" y2="369.68" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="outlet outlet-gfci">
<circle cx="740.23" cy="252.56" r="11.72" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="740.23" y="269.3" fill="#000" font-size="8.2" text-anchor="middle" dominant-baseline="hanging">GFI</text>
</g>
<g class="outlet outlet-gfci">
<circle cx="304.88" cy="1066.05" r="11.72" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="304.88" y="1082.79" fill="#000" font-size="8.2" text-anchor="middle" dominant-baseline="hanging">GFI</text>
</g>
<g class="switch switch-single">
<circle cx="265.12" cy="956.51" r="11.72" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="265.12" y="956.51" fill="#000" font-family="sans-serif" font-size="12.89" font-weight="bold" text-anchor="middle" dominant-baseline="central">S</text>
</g>
<g class="switch switch-single">
<circle cx="740.23" cy="880.47" r="11.72" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="740.23" y="880.47" fill="#000" font-family="sans-serif" font-size="12.89" font-weight="bold" text-anchor="middle" dominant-baseline="central">S</text>
</g>
<g class="switch switch-single">
<circle cx="486.98" cy="472.33" r="11.72" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="486.98" y="472.33" fill="#000" font-family="sans-serif" font-size="12.89" font-weight="bold" text-anchor="middle" dominant-baseline="central">S</text>
</g>
<g class="switch switch-single">
<circle cx="780" cy="472.33" r="11.72" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="780" y="472.33" fill="#000" font-family="sans-serif" font-size="12.89" font-weight="bold" text-anchor="middle" dominant-baseline="central">S</text>
</g>
<g class="switch switch-single">
<circle cx="683.72" cy="359.3" r="11.72" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="683.72" y="359.3" fill="#000" font-family="sans-serif" font-size="12.89" font-weight="bold" text-anchor="middle" dominant-baseline="central">S</text>
</g>
<g class="light-fixture light-recessed">
<rect x="418.49" y="698.96" width="28.13" height="28.13" stroke="#000" stroke-width="0.3mm" fill="none"/>
<circle cx="432.56" cy="713.02" r="8.2" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="light-fixture light-surface">
<circle cx="901.4" cy="713.02" r="11.72" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="888.96" y1="700.59" x2="893.11" y2="704.74" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="913.83" y1="700.59" x2="909.68" y2="704.74" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="888.96" y1="725.46" x2="893.11" y2="721.31" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="913.83" y1="725.46" x2="909.68" y2="721.31" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="light-fixture light-surface">
<circle cx="332.09" cy="311.16" r="11.72" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="319.66" y1="298.73" x2="323.81" y2="302.87" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="344.52" y1="298.73" x2="340.38" y2="302.87" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="319.66" y1="323.59" x2="323.81" y2="319.45" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="344.52" y1="323.59" x2="340.38" y2="319.45" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="light-fixture light-surface">
<circle cx="901.4" cy="311.16" r="11.72" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="888.96" y1="298.73" x2="893.11" y2="302.87" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="913.83" y1="298.73" x2="909.68" y2="302.87" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="888.96" y1="323.59" x2="893.11" y2="319.45" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="913.83" y1="323.59" x2="909.68" y2="319.45" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="light-fixture light-surface">
<circle cx="633.49" cy="277.67" r="11.72" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="621.06" y1="265.24" x2="625.2" y2="269.39" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="645.92" y1="265.24" x2="641.78" y2="269.39" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="621.06" y1="290.11" x2="625.2" y2="285.96" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="645.92" y1="290.11" x2="641.78" y2="285.96" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="smoke-detector">
<circle cx="432.56" cy="612.56" r="11.72" stroke="#000" stroke-width="0.3mm" fill="none"/>
<text x="432.56" y="612.56" fill="#000" font-family="sans-serif" font-size="10.55" text-anchor="middle" dominant-baseline="central">S/CO</text>
</g>
<g class="smoke-detector">
<circle cx="332.09" cy="311.16" r="11.72" stroke="#000" stroke-width="0.3mm" fill="none"/>
<text x="332.09" y="311.16" fill="#000" font-family="sans-serif" font-size="10.55" text-anchor="middle" dominant-baseline="central">S/CO</text>
</g>
</g>
</g>
<g class="layer-plumbing">
<g class="plumbing">
<polyline points="846.98,509.3 830.23,478.6" stroke="#0000CC" stroke-width="0.4mm" fill="none"/>
<text x="835.26" y="478.6" fill="#0000CC" font-family="sans-serif" font-size="5.02" text-anchor="start" dominant-baseline="central">1/2in</text>
<polyline points="846.98,509.3 863.72,478.6" stroke="#CC0000" stroke-width="0.4mm" fill="none"/>
<text x="868.74" y="478.6" fill="#CC0000" font-family="sans-serif" font-size="5.02" text-anchor="start" dominant-baseline="central">1/2in</text>
<polyline points="711.63,219.07 733.95,235.81" stroke="#0000CC" stroke-width="0.4mm" fill="none"/>
<text x="738.98" y="235.81" fill="#0000CC" font-family="sans-serif" font-size="5.02" text-anchor="start" dominant-baseline="central">1/2in</text>
<polyline points="711.63,219.07 733.95,202.33" stroke="#CC0000" stroke-width="0.4mm" fill="none"/>
<text x="738.98" y="202.33" fill="#CC0000" font-family="sans-serif" font-size="5.02" text-anchor="start" dominant-baseline="central">1/2in</text>
<polyline points="694.88,319.53 733.95,319.53" stroke="#006600" stroke-width="0.5mm" fill="none"/>
<polyline points="231.63,1093.95 164.65,1133.02" stroke="#006600" stroke-width="0.5mm" fill="none"/>
<g class="plumbing-fixture fixture-kitchen-sink">
<rect x="800.93" y="478.6" width="92.09" height="61.4" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="846.98" y1="478.6" x2="846.98" y2="540" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="plumbing-fixture fixture-bathtub">
<rect x="466.05" y="118.6" width="167.44" height="0" stroke="#000" stroke-width="0.3mm" fill="none"/>
<path d="M 466.05,118.6 A 83.72,83.72 0 0,1 633.49,118.6" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="466.05" y1="118.6" x2="466.05" y2="118.6" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="633.49" y1="118.6" x2="633.49" y2="118.6" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="plumbing-fixture fixture-toilet" transform="rotate(90, 694.8837209302325, 319.5348837209301)">
<rect x="674.79" y="280.47" width="40.19" height="19.53" stroke="#000" stroke-width="0.3mm" fill="none"/>
<ellipse cx="694.88" cy="327.35" rx="25.12" ry="31.26" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="plumbing-fixture fixture-bath-sink" transform="rotate(90, 711.627906976744, 219.06976744186045)">
<ellipse cx="711.63" cy="219.07" rx="27.91" ry="22.33" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="plumbing-fixture fixture-bath-sink" transform="rotate(180, 164.65116279069764, 1110.6976744186045)">
<ellipse cx="164.65" cy="1110.7" rx="27.91" ry="22.33" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="plumbing-fixture fixture-toilet" transform="rotate(180, 231.62790697674413, 1093.9534883720928)">
<rect x="211.53" y="1054.88" width="40.19" height="19.53" stroke="#000" stroke-width="0.3mm" fill="none"/>
<ellipse cx="231.63" cy="1101.77" rx="25.12" ry="31.26" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
</g>
</g>
<g class="layer-title-block">
<g class="title-block" font-family="'Helvetica','Arial',sans-serif" fill="#000">
<rect x="830" y="1251.63" width="350" height="140" stroke="#000" stroke-width="0.50" fill="white"/>
<line x1="830" y1="1341.63" x2="1180" y2="1341.63" stroke="#000" stroke-width="0.35"/>
<text x="842" y="1275.63" font-size="18" font-weight="bold">Small Two-Bedroom House</text>
<text x="842" y="1297.63" font-size="13">456 Oak Avenue, Anytown, ST 12345</text>
<text x="842" y="1317.63" font-size="13">John Doe</text>
<text x="842" y="1361.63" font-size="12">Sheet: A1</text>
<text x="1015" y="1361.63" font-size="12">Date: 2026-02-13</text>
<text x="842" y="1379.63" font-size="12">Scale: 1/4in = 1ft</text>
<text x="1015" y="1379.63" fill="#666" font-size="10">FloorScript v0.1</text>
</g>
</g>
</svg>"
`;

exports[`visual regression > multi-room with electrical hidden renders consistently 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 1411.63" width="1200" height="1411.63">
<rect x="0" y="0" width="1200" height="1411.63" fill="white"/>
<g class="layer-structural">
<g class="walls">
<g fill="#333" stroke="none">
<rect x="733.95" y="813.49" width="12.56" height="133.95"/>
<rect x="733.95" y="478.6" width="12.56" height="133.95"/>
</g>
<g fill="#333" stroke="none">
<rect x="533.02" y="466.05" width="33.49" height="12.56"/>
<rect x="700.47" y="466.05" width="33.49" height="12.56"/>
</g>
<rect x="131.16" y="466.05" width="389.3" height="12.56" stroke="none" fill="#333"/>
<g fill="#333" stroke="none">
<rect x="131.16" y="947.44" width="33.49" height="18.14"/>
<rect x="248.37" y="947.44" width="83.72" height="18.14"/>
<rect x="432.56" y="947.44" width="66.98" height="18.14"/>
</g>
<rect x="746.51" y="466.05" width="334.88" height="12.56" stroke="none" fill="#333"/>
<rect x="520.47" y="365.58" width="12.56" height="16.74" stroke="none" fill="#333"/>
<g fill="#333" stroke="none">
<rect x="533.02" y="353.02" width="33.49" height="12.56"/>
<rect x="650.23" y="353.02" width="83.72" height="12.56"/>
</g>
<rect x="733.95" y="365.58" width="12.56" height="16.74" stroke="none" fill="#333"/>
<rect x="520.47" y="131.16" width="12.56" height="251.16" stroke="none" fill="#333"/>
<rect x="733.95" y="131.16" width="12.56" height="251.16" stroke="none" fill="#333"/>
<rect x="520.47" y="466.05" width="12.56" height="12.56" stroke="none" fill="#333"/>
<g fill="#000" stroke="none">
<rect x="298.6" y="947.44" width="33.49" height="18.14"/>
<rect x="432.56" y="947.44" width="66.98" height="18.14"/>
<rect x="633.49" y="947.44" width="100.47" height="18.14"/>
</g>
<rect x="118.6" y="466.05" width="12.56" height="12.56" stroke="none" fill="#333"/>
<rect x="520.47" y="353.02" width="12.56" height="12.56" stroke="none" fill="#333"/>
<rect x="733.95" y="118.6" width="12.56" height="12.56" stroke="none" fill="#333"/>
<rect x="520.47" y="118.6" width="12.56" height="12.56" stroke="none" fill="#333"/>
<rect x="733.95" y="353.02" width="12.56" height="12.56" stroke="none" fill="#333"/>
<g fill="#000" stroke="none">
<rect x="113.02" y="813.49" width="18.14" height="143.02"/>
<rect x="113.02" y="466.05" width="18.14" height="180"/>
</g>
<g fill="#000" stroke="none">
<rect x="733.95" y="947.44" width="113.02" height="18.14"/>
<rect x="980.93" y="947.44" width="118.6" height="18.14"/>
</g>
<g fill="#000" stroke="none">
<rect x="1081.4" y="813.49" width="18.14" height="152.09"/>
<rect x="1081.4" y="466.05" width="18.14" height="180"/>
</g>
<g fill="#000" stroke="none">
<rect x="100.47" y="113.02" width="219.07" height="18.14"/>
<rect x="453.49" y="113.02" width="79.53" height="18.14"/>
</g>
<g fill="#000" stroke="none">
<rect x="100.47" y="449.3" width="18.14" height="29.3"/>
<rect x="100.47" y="131.16" width="18.14" height="217.67"/>
</g>
<rect x="520.47" y="100.47" width="226.05" height="18.14" stroke="none" fill="#000"/>
<g fill="#000" stroke="none">
<rect x="733.95" y="113.02" width="46.05" height="18.14"/>
<rect x="913.95" y="113.02" width="185.58" height="18.14"/>
</g>
<g fill="#000" stroke="none">
<rect x="1081.4" y="432.56" width="18.14" height="46.05"/>
<rect x="1081.4" y="131.16" width="18.14" height="200.93"/>
</g>
<rect x="113.02" y="1133.02" width="198.14" height="18.14" stroke="none" fill="#000"/>
<rect x="298.6" y="956.51" width="12.56" height="176.51" stroke="none" fill="#333"/>
<rect x="113.02" y="947.44" width="18.14" height="185.58" stroke="none" fill="#000"/>
</g>
<g class="opening cased-opening" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="733.95" y1="813.49" x2="746.51" y2="813.49"/>
<line x1="733.95" y1="813.49" x2="733.95" y2="832.33"/>
<line x1="746.51" y1="813.49" x2="746.51" y2="832.33"/>
<line x1="733.95" y1="612.56" x2="746.51" y2="612.56"/>
<line x1="733.95" y1="612.56" x2="733.95" y2="593.72"/>
<line x1="746.51" y1="612.56" x2="746.51" y2="593.72"/>
</g>
<g class="opening cased-opening" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="566.51" y1="466.05" x2="566.51" y2="478.6"/>
<line x1="566.51" y1="466.05" x2="547.67" y2="466.05"/>
<line x1="566.51" y1="478.6" x2="547.67" y2="478.6"/>
<line x1="700.47" y1="466.05" x2="700.47" y2="478.6"/>
<line x1="700.47" y1="466.05" x2="719.3" y2="466.05"/>
<line x1="700.47" y1="478.6" x2="719.3" y2="478.6"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="432.56" y1="965.58" x2="432.56" y2="865.12"/>
<path d="M 432.56,865.12 A 100.47,100.47 0 0,0 332.09,965.58"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="499.53" y1="951.98" x2="633.49" y2="951.98"/>
<line x1="499.53" y1="961.05" x2="633.49" y2="961.05"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="164.65" y1="965.58" x2="164.65" y2="1049.3"/>
<path d="M 164.65,1049.3 A 83.72,83.72 0 0,0 248.37,965.58"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="520.47" y1="466.05" x2="436.74" y2="466.05"/>
<path d="M 436.74,466.05 A 83.72,83.72 0 0,1 520.47,382.33"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="566.51" y1="365.58" x2="566.51" y2="281.86"/>
<path d="M 566.51,281.86 A 83.72,83.72 0 0,1 650.23,365.58"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="733.95" y1="466.05" x2="817.67" y2="466.05"/>
<path d="M 817.67,466.05 A 83.72,83.72 0 0,0 733.95,382.33"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="520.47" y1="466.05" x2="436.74" y2="466.05"/>
<path d="M 436.74,466.05 A 83.72,83.72 0 0,1 520.47,382.33"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="733.95" y1="466.05" x2="817.67" y2="466.05"/>
<path d="M 817.67,466.05 A 83.72,83.72 0 0,0 733.95,382.33"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="432.56" y1="965.58" x2="432.56" y2="865.12"/>
<path d="M 432.56,865.12 A 100.47,100.47 0 0,0 332.09,965.58"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="499.53" y1="951.98" x2="633.49" y2="951.98"/>
<line x1="499.53" y1="961.05" x2="633.49" y2="961.05"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="117.56" y1="813.49" x2="117.56" y2="646.05"/>
<line x1="126.63" y1="813.49" x2="126.63" y2="646.05"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="846.98" y1="951.98" x2="980.93" y2="951.98"/>
<line x1="846.98" y1="961.05" x2="980.93" y2="961.05"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="319.53" y1="117.56" x2="453.49" y2="117.56"/>
<line x1="319.53" y1="126.63" x2="453.49" y2="126.63"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="105" y1="449.3" x2="105" y2="348.84"/>
<line x1="114.07" y1="449.3" x2="114.07" y2="348.84"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="780" y1="117.56" x2="913.95" y2="117.56"/>
<line x1="780" y1="126.63" x2="913.95" y2="126.63"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="1085.93" y1="432.56" x2="1085.93" y2="332.09"/>
<line x1="1095" y1="432.56" x2="1095" y2="332.09"/>
</g>
<g class="extension-walls" id="extension-bay-window">
<rect x="1081.4" y="627.91" width="83.72" height="18.14" stroke="none" fill="#000"/>
<rect x="1081.4" y="813.49" width="83.72" height="18.14" stroke="none" fill="#000"/>
<g fill="#000" stroke="none">
<rect x="1165.12" y="796.74" width="18.14" height="34.88"/>
<rect x="1165.12" y="627.91" width="18.14" height="34.88"/>
</g>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="1169.65" y1="796.74" x2="1169.65" y2="662.79"/>
<line x1="1178.72" y1="796.74" x2="1178.72" y2="662.79"/>
</g>
<g class="enclosure-walls" id="enclosure-closet1">
<g fill="#333" stroke="none">
<rect x="240" y="248.37" width="12.56" height="83.72"/>
<rect x="240" y="131.16" width="12.56" height="33.49"/>
</g>
<rect x="118.6" y="319.53" width="133.95" height="12.56" stroke="none" fill="#333"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="240" y1="248.37" x2="156.28" y2="248.37"/>
<path d="M 156.28,248.37 A 83.72,83.72 0 0,1 240,164.65"/>
</g>
<g class="enclosure-walls" id="enclosure-closet2">
<g fill="#333" stroke="none">
<rect x="964.19" y="248.37" width="12.56" height="50.23"/>
<rect x="964.19" y="131.16" width="12.56" height="16.74"/>
</g>
<rect x="964.19" y="286.05" width="117.21" height="12.56" stroke="none" fill="#333"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="964.19" y1="147.91" x2="1064.65" y2="147.91"/>
<path d="M 1064.65,147.91 A 100.47,100.47 0 0,1 964.19,248.37"/>
</g>
</g>
<g class="layer-labels">
<text x="432.56" y="713.02" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="16.74" font-weight="500" text-anchor="middle" dominant-baseline="central">Living Room</text>
<text x="913.95" y="713.02" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="16.74" font-weight="500" text-anchor="middle" dominant-baseline="central">Kitchen</text>
<text x="1123.26" y="729.77" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="16.74" font-weight="500" text-anchor="middle" dominant-baseline="central">Bay Window</text>
<text x="633.49" y="415.81" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="16.74" font-weight="500" text-anchor="middle" dominant-baseline="central">Hall</text>
<text x="319.53" y="298.6" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="16.74" font-weight="500" text-anchor="middle" dominant-baseline="central">Bedroom 1</text>
<text x="185.58" y="231.63" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="16.74" font-weight="500" text-anchor="middle" dominant-baseline="central">Walk-in Closet</text>
<text x="633.49" y="235.81" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="16.74" font-weight="500" text-anchor="middle" dominant-baseline="central">Full Bath</text>
<text x="913.95" y="298.6" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="16.74" font-weight="500" text-anchor="middle" dominant-baseline="central">Bedroom 2</text>
<text x="1022.79" y="214.88" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="16.74" font-weight="500" text-anchor="middle" dominant-baseline="central">Closet</text>
<text x="214.88" y="1049.3" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="16.74" font-weight="500" text-anchor="middle" dominant-baseline="central">Half Bath</text>
</g>
<g class="layer-dimensions">
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="131.16" y1="411.63" x2="733.95" y2="411.63"/>
<line x1="126.14" y1="416.65" x2="136.19" y2="406.6"/>
<line x1="728.93" y1="416.65" x2="738.98" y2="406.6"/>
<text x="432.56" y="403.26" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle">18&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="64.19" y1="947.44" x2="64.19" y2="478.6"/>
<line x1="59.16" y1="952.47" x2="69.21" y2="942.42"/>
<line x1="59.16" y1="483.63" x2="69.21" y2="473.58"/>
<text x="55.81" y="713.02" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle" transform="rotate(-90, 55.81, 713.02)">14&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="746.51" y1="1014.42" x2="1081.4" y2="1014.42"/>
<line x1="741.49" y1="1019.44" x2="751.53" y2="1009.4"/>
<line x1="1076.37" y1="1019.44" x2="1086.42" y2="1009.4"/>
<text x="913.95" y="1006.05" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle">10&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="1148.37" y1="947.44" x2="1148.37" y2="478.6"/>
<line x1="1143.35" y1="952.47" x2="1153.4" y2="942.42"/>
<line x1="1143.35" y1="483.63" x2="1153.4" y2="473.58"/>
<text x="1140" y="713.02" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle" transform="rotate(-90, 1140, 713.02)">14&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="533.02" y1="298.6" x2="733.95" y2="298.6"/>
<line x1="528" y1="303.63" x2="538.05" y2="293.58"/>
<line x1="728.93" y1="303.63" x2="738.98" y2="293.58"/>
<text x="633.49" y="290.23" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle">6&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="800.93" y1="466.05" x2="800.93" y2="365.58"/>
<line x1="795.91" y1="471.07" x2="805.95" y2="461.02"/>
<line x1="795.91" y1="370.6" x2="805.95" y2="360.56"/>
<text x="792.56" y="415.81" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle" transform="rotate(-90, 792.56, 415.81)">3&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="118.6" y1="64.19" x2="520.47" y2="64.19"/>
<line x1="113.58" y1="69.21" x2="123.63" y2="59.16"/>
<line x1="515.44" y1="69.21" x2="525.49" y2="59.16"/>
<text x="319.53" y="55.81" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle">12&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="51.63" y1="466.05" x2="51.63" y2="131.16"/>
<line x1="46.6" y1="471.07" x2="56.65" y2="461.02"/>
<line x1="46.6" y1="136.19" x2="56.65" y2="126.14"/>
<text x="43.26" y="298.6" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle" transform="rotate(-90, 43.26, 298.6)">10&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="533.02" y1="51.63" x2="733.95" y2="51.63"/>
<line x1="528" y1="56.65" x2="538.05" y2="46.6"/>
<line x1="728.93" y1="56.65" x2="738.98" y2="46.6"/>
<text x="633.49" y="43.26" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle">6&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="800.93" y1="353.02" x2="800.93" y2="118.6"/>
<line x1="795.91" y1="358.05" x2="805.95" y2="348"/>
<line x1="795.91" y1="123.63" x2="805.95" y2="113.58"/>
<text x="792.56" y="235.81" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle" transform="rotate(-90, 792.56, 235.81)">7&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="746.51" y1="64.19" x2="1081.4" y2="64.19"/>
<line x1="741.49" y1="69.21" x2="751.53" y2="59.16"/>
<line x1="1076.37" y1="69.21" x2="1086.42" y2="59.16"/>
<text x="913.95" y="55.81" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle">10&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="1148.37" y1="466.05" x2="1148.37" y2="131.16"/>
<line x1="1143.35" y1="471.07" x2="1153.4" y2="461.02"/>
<line x1="1143.35" y1="136.19" x2="1153.4" y2="126.14"/>
<text x="1140" y="298.6" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle" transform="rotate(-90, 1140, 298.6)">10&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="131.16" y1="1200" x2="298.6" y2="1200"/>
<line x1="126.14" y1="1205.02" x2="136.19" y2="1194.98"/>
<line x1="293.58" y1="1205.02" x2="303.63" y2="1194.98"/>
<text x="214.88" y="1191.63" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle">5&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="64.19" y1="1133.02" x2="64.19" y2="965.58"/>
<line x1="59.16" y1="1138.05" x2="69.21" y2="1128"/>
<line x1="59.16" y1="970.6" x2="69.21" y2="960.56"/>
<text x="55.81" y="1049.3" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle" transform="rotate(-90, 55.81, 1049.3)">5&apos;-0&quot;</text>
</g>
</g>
<g class="layer-plumbing">
<g class="plumbing">
<polyline points="846.98,509.3 830.23,478.6" stroke="#0000CC" stroke-width="0.4mm" fill="none"/>
<text x="835.26" y="478.6" fill="#0000CC" font-family="sans-serif" font-size="5.02" text-anchor="start" dominant-baseline="central">1/2in</text>
<polyline points="846.98,509.3 863.72,478.6" stroke="#CC0000" stroke-width="0.4mm" fill="none"/>
<text x="868.74" y="478.6" fill="#CC0000" font-family="sans-serif" font-size="5.02" text-anchor="start" dominant-baseline="central">1/2in</text>
<polyline points="711.63,219.07 733.95,235.81" stroke="#0000CC" stroke-width="0.4mm" fill="none"/>
<text x="738.98" y="235.81" fill="#0000CC" font-family="sans-serif" font-size="5.02" text-anchor="start" dominant-baseline="central">1/2in</text>
<polyline points="711.63,219.07 733.95,202.33" stroke="#CC0000" stroke-width="0.4mm" fill="none"/>
<text x="738.98" y="202.33" fill="#CC0000" font-family="sans-serif" font-size="5.02" text-anchor="start" dominant-baseline="central">1/2in</text>
<polyline points="694.88,319.53 733.95,319.53" stroke="#006600" stroke-width="0.5mm" fill="none"/>
<polyline points="231.63,1093.95 164.65,1133.02" stroke="#006600" stroke-width="0.5mm" fill="none"/>
<g class="plumbing-fixture fixture-kitchen-sink">
<rect x="800.93" y="478.6" width="92.09" height="61.4" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="846.98" y1="478.6" x2="846.98" y2="540" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="plumbing-fixture fixture-bathtub">
<rect x="466.05" y="118.6" width="167.44" height="0" stroke="#000" stroke-width="0.3mm" fill="none"/>
<path d="M 466.05,118.6 A 83.72,83.72 0 0,1 633.49,118.6" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="466.05" y1="118.6" x2="466.05" y2="118.6" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="633.49" y1="118.6" x2="633.49" y2="118.6" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="plumbing-fixture fixture-toilet" transform="rotate(90, 694.8837209302325, 319.5348837209301)">
<rect x="674.79" y="280.47" width="40.19" height="19.53" stroke="#000" stroke-width="0.3mm" fill="none"/>
<ellipse cx="694.88" cy="327.35" rx="25.12" ry="31.26" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="plumbing-fixture fixture-bath-sink" transform="rotate(90, 711.627906976744, 219.06976744186045)">
<ellipse cx="711.63" cy="219.07" rx="27.91" ry="22.33" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="plumbing-fixture fixture-bath-sink" transform="rotate(180, 164.65116279069764, 1110.6976744186045)">
<ellipse cx="164.65" cy="1110.7" rx="27.91" ry="22.33" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="plumbing-fixture fixture-toilet" transform="rotate(180, 231.62790697674413, 1093.9534883720928)">
<rect x="211.53" y="1054.88" width="40.19" height="19.53" stroke="#000" stroke-width="0.3mm" fill="none"/>
<ellipse cx="231.63" cy="1101.77" rx="25.12" ry="31.26" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
</g>
</g>
<g class="layer-title-block">
<g class="title-block" font-family="'Helvetica','Arial',sans-serif" fill="#000">
<rect x="830" y="1251.63" width="350" height="140" stroke="#000" stroke-width="0.50" fill="white"/>
<line x1="830" y1="1341.63" x2="1180" y2="1341.63" stroke="#000" stroke-width="0.35"/>
<text x="842" y="1275.63" font-size="18" font-weight="bold">Small Two-Bedroom House</text>
<text x="842" y="1297.63" font-size="13">456 Oak Avenue, Anytown, ST 12345</text>
<text x="842" y="1317.63" font-size="13">John Doe</text>
<text x="842" y="1361.63" font-size="12">Sheet: A1</text>
<text x="1015" y="1361.63" font-size="12">Date: 2026-02-13</text>
<text x="842" y="1379.63" font-size="12">Scale: 1/4in = 1ft</text>
<text x="1015" y="1379.63" fill="#666" font-size="10">FloorScript v0.1</text>
</g>
</g>
</svg>"
`;

exports[`visual regression > multi-room with plumbing hidden renders consistently 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 1411.63" width="1200" height="1411.63">
<rect x="0" y="0" width="1200" height="1411.63" fill="white"/>
<g class="layer-structural">
<g class="walls">
<g fill="#333" stroke="none">
<rect x="733.95" y="813.49" width="12.56" height="133.95"/>
<rect x="733.95" y="478.6" width="12.56" height="133.95"/>
</g>
<g fill="#333" stroke="none">
<rect x="533.02" y="466.05" width="33.49" height="12.56"/>
<rect x="700.47" y="466.05" width="33.49" height="12.56"/>
</g>
<rect x="131.16" y="466.05" width="389.3" height="12.56" stroke="none" fill="#333"/>
<g fill="#333" stroke="none">
<rect x="131.16" y="947.44" width="33.49" height="18.14"/>
<rect x="248.37" y="947.44" width="83.72" height="18.14"/>
<rect x="432.56" y="947.44" width="66.98" height="18.14"/>
</g>
<rect x="746.51" y="466.05" width="334.88" height="12.56" stroke="none" fill="#333"/>
<rect x="520.47" y="365.58" width="12.56" height="16.74" stroke="none" fill="#333"/>
<g fill="#333" stroke="none">
<rect x="533.02" y="353.02" width="33.49" height="12.56"/>
<rect x="650.23" y="353.02" width="83.72" height="12.56"/>
</g>
<rect x="733.95" y="365.58" width="12.56" height="16.74" stroke="none" fill="#333"/>
<rect x="520.47" y="131.16" width="12.56" height="251.16" stroke="none" fill="#333"/>
<rect x="733.95" y="131.16" width="12.56" height="251.16" stroke="none" fill="#333"/>
<rect x="520.47" y="466.05" width="12.56" height="12.56" stroke="none" fill="#333"/>
<g fill="#000" stroke="none">
<rect x="298.6" y="947.44" width="33.49" height="18.14"/>
<rect x="432.56" y="947.44" width="66.98" height="18.14"/>
<rect x="633.49" y="947.44" width="100.47" height="18.14"/>
</g>
<rect x="118.6" y="466.05" width="12.56" height="12.56" stroke="none" fill="#333"/>
<rect x="520.47" y="353.02" width="12.56" height="12.56" stroke="none" fill="#333"/>
<rect x="733.95" y="118.6" width="12.56" height="12.56" stroke="none" fill="#333"/>
<rect x="520.47" y="118.6" width="12.56" height="12.56" stroke="none" fill="#333"/>
<rect x="733.95" y="353.02" width="12.56" height="12.56" stroke="none" fill="#333"/>
<g fill="#000" stroke="none">
<rect x="113.02" y="813.49" width="18.14" height="143.02"/>
<rect x="113.02" y="466.05" width="18.14" height="180"/>
</g>
<g fill="#000" stroke="none">
<rect x="733.95" y="947.44" width="113.02" height="18.14"/>
<rect x="980.93" y="947.44" width="118.6" height="18.14"/>
</g>
<g fill="#000" stroke="none">
<rect x="1081.4" y="813.49" width="18.14" height="152.09"/>
<rect x="1081.4" y="466.05" width="18.14" height="180"/>
</g>
<g fill="#000" stroke="none">
<rect x="100.47" y="113.02" width="219.07" height="18.14"/>
<rect x="453.49" y="113.02" width="79.53" height="18.14"/>
</g>
<g fill="#000" stroke="none">
<rect x="100.47" y="449.3" width="18.14" height="29.3"/>
<rect x="100.47" y="131.16" width="18.14" height="217.67"/>
</g>
<rect x="520.47" y="100.47" width="226.05" height="18.14" stroke="none" fill="#000"/>
<g fill="#000" stroke="none">
<rect x="733.95" y="113.02" width="46.05" height="18.14"/>
<rect x="913.95" y="113.02" width="185.58" height="18.14"/>
</g>
<g fill="#000" stroke="none">
<rect x="1081.4" y="432.56" width="18.14" height="46.05"/>
<rect x="1081.4" y="131.16" width="18.14" height="200.93"/>
</g>
<rect x="113.02" y="1133.02" width="198.14" height="18.14" stroke="none" fill="#000"/>
<rect x="298.6" y="956.51" width="12.56" height="176.51" stroke="none" fill="#333"/>
<rect x="113.02" y="947.44" width="18.14" height="185.58" stroke="none" fill="#000"/>
</g>
<g class="opening cased-opening" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="733.95" y1="813.49" x2="746.51" y2="813.49"/>
<line x1="733.95" y1="813.49" x2="733.95" y2="832.33"/>
<line x1="746.51" y1="813.49" x2="746.51" y2="832.33"/>
<line x1="733.95" y1="612.56" x2="746.51" y2="612.56"/>
<line x1="733.95" y1="612.56" x2="733.95" y2="593.72"/>
<line x1="746.51" y1="612.56" x2="746.51" y2="593.72"/>
</g>
<g class="opening cased-opening" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="566.51" y1="466.05" x2="566.51" y2="478.6"/>
<line x1="566.51" y1="466.05" x2="547.67" y2="466.05"/>
<line x1="566.51" y1="478.6" x2="547.67" y2="478.6"/>
<line x1="700.47" y1="466.05" x2="700.47" y2="478.6"/>
<line x1="700.47" y1="466.05" x2="719.3" y2="466.05"/>
<line x1="700.47" y1="478.6" x2="719.3" y2="478.6"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="432.56" y1="965.58" x2="432.56" y2="865.12"/>
<path d="M 432.56,865.12 A 100.47,100.47 0 0,0 332.09,965.58"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="499.53" y1="951.98" x2="633.49" y2="951.98"/>
<line x1="499.53" y1="961.05" x2="633.49" y2="961.05"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="164.65" y1="965.58" x2="164.65" y2="1049.3"/>
<path d="M 164.65,1049.3 A 83.72,83.72 0 0,0 248.37,965.58"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="520.47" y1="466.05" x2="436.74" y2="466.05"/>
<path d="M 436.74,466.05 A 83.72,83.72 0 0,1 520.47,382.33"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="566.51" y1="365.58" x2="566.51" y2="281.86"/>
<path d="M 566.51,281.86 A 83.72,83.72 0 0,1 650.23,365.58"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="733.95" y1="466.05" x2="817.67" y2="466.05"/>
<path d="M 817.67,466.05 A 83.72,83.72 0 0,0 733.95,382.33"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="520.47" y1="466.05" x2="436.74" y2="466.05"/>
<path d="M 436.74,466.05 A 83.72,83.72 0 0,1 520.47,382.33"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="733.95" y1="466.05" x2="817.67" y2="466.05"/>
<path d="M 817.67,466.05 A 83.72,83.72 0 0,0 733.95,382.33"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="432.56" y1="965.58" x2="432.56" y2="865.12"/>
<path d="M 432.56,865.12 A 100.47,100.47 0 0,0 332.09,965.58"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="499.53" y1="951.98" x2="633.49" y2="951.98"/>
<line x1="499.53" y1="961.05" x2="633.49" y2="961.05"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="117.56" y1="813.49" x2="117.56" y2="646.05"/>
<line x1="126.63" y1="813.49" x2="126.63" y2="646.05"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="846.98" y1="951.98" x2="980.93" y2="951.98"/>
<line x1="846.98" y1="961.05" x2="980.93" y2="961.05"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="319.53" y1="117.56" x2="453.49" y2="117.56"/>
<line x1="319.53" y1="126.63" x2="453.49" y2="126.63"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="105" y1="449.3" x2="105" y2="348.84"/>
<line x1="114.07" y1="449.3" x2="114.07" y2="348.84"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="780" y1="117.56" x2="913.95" y2="117.56"/>
<line x1="780" y1="126.63" x2="913.95" y2="126.63"/>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="1085.93" y1="432.56" x2="1085.93" y2="332.09"/>
<line x1="1095" y1="432.56" x2="1095" y2="332.09"/>
</g>
<g class="extension-walls" id="extension-bay-window">
<rect x="1081.4" y="627.91" width="83.72" height="18.14" stroke="none" fill="#000"/>
<rect x="1081.4" y="813.49" width="83.72" height="18.14" stroke="none" fill="#000"/>
<g fill="#000" stroke="none">
<rect x="1165.12" y="796.74" width="18.14" height="34.88"/>
<rect x="1165.12" y="627.91" width="18.14" height="34.88"/>
</g>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="1169.65" y1="796.74" x2="1169.65" y2="662.79"/>
<line x1="1178.72" y1="796.74" x2="1178.72" y2="662.79"/>
</g>
<g class="enclosure-walls" id="enclosure-closet1">
<g fill="#333" stroke="none">
<rect x="240" y="248.37" width="12.56" height="83.72"/>
<rect x="240" y="131.16" width="12.56" height="33.49"/>
</g>
<rect x="118.6" y="319.53" width="133.95" height="12.56" stroke="none" fill="#333"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="240" y1="248.37" x2="156.28" y2="248.37"/>
<path d="M 156.28,248.37 A 83.72,83.72 0 0,1 240,164.65"/>
</g>
<g class="enclosure-walls" id="enclosure-closet2">
<g fill="#333" stroke="none">
<rect x="964.19" y="248.37" width="12.56" height="50.23"/>
<rect x="964.19" y="131.16" width="12.56" height="16.74"/>
</g>
<rect x="964.19" y="286.05" width="117.21" height="12.56" stroke="none" fill="#333"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="964.19" y1="147.91" x2="1064.65" y2="147.91"/>
<path d="M 1064.65,147.91 A 100.47,100.47 0 0,1 964.19,248.37"/>
</g>
</g>
<g class="layer-labels">
<text x="432.56" y="713.02" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="16.74" font-weight="500" text-anchor="middle" dominant-baseline="central">Living Room</text>
<text x="913.95" y="713.02" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="16.74" font-weight="500" text-anchor="middle" dominant-baseline="central">Kitchen</text>
<text x="1123.26" y="729.77" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="16.74" font-weight="500" text-anchor="middle" dominant-baseline="central">Bay Window</text>
<text x="633.49" y="415.81" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="16.74" font-weight="500" text-anchor="middle" dominant-baseline="central">Hall</text>
<text x="319.53" y="298.6" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="16.74" font-weight="500" text-anchor="middle" dominant-baseline="central">Bedroom 1</text>
<text x="185.58" y="231.63" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="16.74" font-weight="500" text-anchor="middle" dominant-baseline="central">Walk-in Closet</text>
<text x="633.49" y="235.81" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="16.74" font-weight="500" text-anchor="middle" dominant-baseline="central">Full Bath</text>
<text x="913.95" y="298.6" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="16.74" font-weight="500" text-anchor="middle" dominant-baseline="central">Bedroom 2</text>
<text x="1022.79" y="214.88" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="16.74" font-weight="500" text-anchor="middle" dominant-baseline="central">Closet</text>
<text x="214.88" y="1049.3" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="16.74" font-weight="500" text-anchor="middle" dominant-baseline="central">Half Bath</text>
</g>
<g class="layer-dimensions">
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="131.16" y1="411.63" x2="733.95" y2="411.63"/>
<line x1="126.14" y1="416.65" x2="136.19" y2="406.6"/>
<line x1="728.93" y1="416.65" x2="738.98" y2="406.6"/>
<text x="432.56" y="403.26" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle">18&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="64.19" y1="947.44" x2="64.19" y2="478.6"/>
<line x1="59.16" y1="952.47" x2="69.21" y2="942.42"/>
<line x1="59.16" y1="483.63" x2="69.21" y2="473.58"/>
<text x="55.81" y="713.02" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle" transform="rotate(-90, 55.81, 713.02)">14&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="746.51" y1="1014.42" x2="1081.4" y2="1014.42"/>
<line x1="741.49" y1="1019.44" x2="751.53" y2="1009.4"/>
<line x1="1076.37" y1="1019.44" x2="1086.42" y2="1009.4"/>
<text x="913.95" y="1006.05" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle">10&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="1148.37" y1="947.44" x2="1148.37" y2="478.6"/>
<line x1="1143.35" y1="952.47" x2="1153.4" y2="942.42"/>
<line x1="1143.35" y1="483.63" x2="1153.4" y2="473.58"/>
<text x="1140" y="713.02" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle" transform="rotate(-90, 1140, 713.02)">14&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="533.02" y1="298.6" x2="733.95" y2="298.6"/>
<line x1="528" y1="303.63" x2="538.05" y2="293.58"/>
<line x1="728.93" y1="303.63" x2="738.98" y2="293.58"/>
<text x="633.49" y="290.23" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle">6&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="800.93" y1="466.05" x2="800.93" y2="365.58"/>
<line x1="795.91" y1="471.07" x2="805.95" y2="461.02"/>
<line x1="795.91" y1="370.6" x2="805.95" y2="360.56"/>
<text x="792.56" y="415.81" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle" transform="rotate(-90, 792.56, 415.81)">3&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="118.6" y1="64.19" x2="520.47" y2="64.19"/>
<line x1="113.58" y1="69.21" x2="123.63" y2="59.16"/>
<line x1="515.44" y1="69.21" x2="525.49" y2="59.16"/>
<text x="319.53" y="55.81" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle">12&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="51.63" y1="466.05" x2="51.63" y2="131.16"/>
<line x1="46.6" y1="471.07" x2="56.65" y2="461.02"/>
<line x1="46.6" y1="136.19" x2="56.65" y2="126.14"/>
<text x="43.26" y="298.6" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle" transform="rotate(-90, 43.26, 298.6)">10&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="533.02" y1="51.63" x2="733.95" y2="51.63"/>
<line x1="528" y1="56.65" x2="538.05" y2="46.6"/>
<line x1="728.93" y1="56.65" x2="738.98" y2="46.6"/>
<text x="633.49" y="43.26" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle">6&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="800.93" y1="353.02" x2="800.93" y2="118.6"/>
<line x1="795.91" y1="358.05" x2="805.95" y2="348"/>
<line x1="795.91" y1="123.63" x2="805.95" y2="113.58"/>
<text x="792.56" y="235.81" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle" transform="rotate(-90, 792.56, 235.81)">7&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="746.51" y1="64.19" x2="1081.4" y2="64.19"/>
<line x1="741.49" y1="69.21" x2="751.53" y2="59.16"/>
<line x1="1076.37" y1="69.21" x2="1086.42" y2="59.16"/>
<text x="913.95" y="55.81" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle">10&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="1148.37" y1="466.05" x2="1148.37" y2="131.16"/>
<line x1="1143.35" y1="471.07" x2="1153.4" y2="461.02"/>
<line x1="1143.35" y1="136.19" x2="1153.4" y2="126.14"/>
<text x="1140" y="298.6" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle" transform="rotate(-90, 1140, 298.6)">10&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="131.16" y1="1200" x2="298.6" y2="1200"/>
<line x1="126.14" y1="1205.02" x2="136.19" y2="1194.98"/>
<line x1="293.58" y1="1205.02" x2="303.63" y2="1194.98"/>
<text x="214.88" y="1191.63" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle">5&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="64.19" y1="1133.02" x2="64.19" y2="965.58"/>
<line x1="59.16" y1="1138.05" x2="69.21" y2="1128"/>
<line x1="59.16" y1="970.6" x2="69.21" y2="960.56"/>
<text x="55.81" y="1049.3" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="11.72" text-anchor="middle" transform="rotate(-90, 55.81, 1049.3)">5&apos;-0&quot;</text>
</g>
</g>
<g class="layer-electrical">
<g class="electrical">
<g class="electrical-panel">
<rect x="750.7" y="888.84" width="33.49" height="50.23" stroke="#000" stroke-width="0.4mm" fill="#fff"/>
<text x="767.44" y="906.42" fill="#000" font-family="sans-serif" font-size="7.37" font-weight="bold" text-anchor="middle" dominant-baseline="central">PANEL</text>
<text x="767.44" y="924" fill="#000" font-family="sans-serif" font-size="6.03" text-anchor="middle" dominant-baseline="central">200A</text>
<text x="767.44" y="944.09" fill="#666" font-family="sans-serif" font-size="5.36" text-anchor="middle" dominant-baseline="hanging">Main Panel</text>
</g>
<polyline points="767.44,913.95 432.56,913.95 432.56,713.02" stroke="#333" stroke-width="0.25mm" fill="none"/>
<polyline points="767.44,913.95 901.4,913.95 901.4,713.02" stroke="#333" stroke-width="0.25mm" fill="none"/>
<g class="outlet outlet-duplex">
<circle cx="466.05" cy="956.51" r="11.72" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<line x1="457.84" y1="952.41" x2="474.25" y2="952.41" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="457.84" y1="960.61" x2="474.25" y2="960.61" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="outlet outlet-duplex">
<circle cx="122.09" cy="646.05" r="11.72" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<line x1="113.89" y1="641.94" x2="130.3" y2="641.94" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="113.89" y1="650.15" x2="130.3" y2="650.15" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="outlet outlet-gfci">
<circle cx="846.98" cy="956.51" r="11.72" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="846.98" y="973.26" fill="#000" font-size="8.2" text-anchor="middle" dominant-baseline="hanging">GFI</text>
</g>
<g class="outlet outlet-gfci">
<circle cx="913.95" cy="472.33" r="11.72" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="913.95" y="489.07" fill="#000" font-size="8.2" text-anchor="middle" dominant-baseline="hanging">GFI</text>
</g>
<g class="outlet outlet-duplex">
<circle cx="319.53" cy="122.09" r="11.72" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<line x1="311.33" y1="117.99" x2="327.74" y2="117.99" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="311.33" y1="126.2" x2="327.74" y2="126.2" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="outlet outlet-duplex">
<circle cx="109.53" cy="399.07" r="11.72" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<line x1="101.33" y1="394.97" x2="117.74" y2="394.97" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="101.33" y1="403.17" x2="117.74" y2="403.17" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="outlet outlet-duplex">
<circle cx="913.95" cy="122.09" r="11.72" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<line x1="905.75" y1="117.99" x2="922.16" y2="117.99" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="905.75" y1="126.2" x2="922.16" y2="126.2" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="outlet outlet-duplex">
<circle cx="1090.47" cy="365.58" r="11.72" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<line x1="1082.26" y1="361.48" x2="1098.67" y2="361.48" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="1082.26" y1="369.68" x2="1098.67" y2="369.68" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="outlet outlet-gfci">
<circle cx="740.23" cy="252.56" r="11.72" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="740.23" y="269.3" fill="#000" font-size="8.2" text-anchor="middle" dominant-baseline="hanging">GFI</text>
</g>
<g class="outlet outlet-gfci">
<circle cx="304.88" cy="1066.05" r="11.72" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="304.88" y="1082.79" fill="#000" font-size="8.2" text-anchor="middle" dominant-baseline="hanging">GFI</text>
</g>
<g class="switch switch-single">
<circle cx="265.12" cy="956.51" r="11.72" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="265.12" y="956.51" fill="#000" font-family="sans-serif" font-size="12.89" font-weight="bold" text-anchor="middle" dominant-baseline="central">S</text>
</g>
<g class="switch switch-single">
<circle cx="740.23" cy="880.47" r="11.72" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="740.23" y="880.47" fill="#000" font-family="sans-serif" font-size="12.89" font-weight="bold" text-anchor="middle" dominant-baseline="central">S</text>
</g>
<g class="switch switch-single">
<circle cx="486.98" cy="472.33" r="11.72" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="486.98" y="472.33" fill="#000" font-family="sans-serif" font-size="12.89" font-weight="bold" text-anchor="middle" dominant-baseline="central">S</text>
</g>
<g class="switch switch-single">
<circle cx="780" cy="472.33" r="11.72" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="780" y="472.33" fill="#000" font-family="sans-serif" font-size="12.89" font-weight="bold" text-anchor="middle" dominant-baseline="central">S</text>
</g>
<g class="switch switch-single">
<circle cx="683.72" cy="359.3" r="11.72" stroke="#000" stroke-width="0.3mm" fill="#fff"/>
<text x="683.72" y="359.3" fill="#000" font-family="sans-serif" font-size="12.89" font-weight="bold" text-anchor="middle" dominant-baseline="central">S</text>
</g>
<g class="light-fixture light-recessed">
<rect x="418.49" y="698.96" width="28.13" height="28.13" stroke="#000" stroke-width="0.3mm" fill="none"/>
<circle cx="432.56" cy="713.02" r="8.2" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="light-fixture light-surface">
<circle cx="901.4" cy="713.02" r="11.72" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="888.96" y1="700.59" x2="893.11" y2="704.74" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="913.83" y1="700.59" x2="909.68" y2="704.74" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="888.96" y1="725.46" x2="893.11" y2="721.31" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="913.83" y1="725.46" x2="909.68" y2="721.31" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="light-fixture light-surface">
<circle cx="332.09" cy="311.16" r="11.72" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="319.66" y1="298.73" x2="323.81" y2="302.87" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="344.52" y1="298.73" x2="340.38" y2="302.87" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="319.66" y1="323.59" x2="323.81" y2="319.45" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="344.52" y1="323.59" x2="340.38" y2="319.45" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="light-fixture light-surface">
<circle cx="901.4" cy="311.16" r="11.72" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="888.96" y1="298.73" x2="893.11" y2="302.87" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="913.83" y1="298.73" x2="909.68" y2="302.87" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="888.96" y1="323.59" x2="893.11" y2="319.45" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="913.83" y1="323.59" x2="909.68" y2="319.45" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="light-fixture light-surface">
<circle cx="633.49" cy="277.67" r="11.72" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="621.06" y1="265.24" x2="625.2" y2="269.39" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="645.92" y1="265.24" x2="641.78" y2="269.39" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="621.06" y1="290.11" x2="625.2" y2="285.96" stroke="#000" stroke-width="0.3mm" fill="none"/>
<line x1="645.92" y1="290.11" x2="641.78" y2="285.96" stroke="#000" stroke-width="0.3mm" fill="none"/>
</g>
<g class="smoke-detector">
<circle cx="432.56" cy="612.56" r="11.72" stroke="#000" stroke-width="0.3mm" fill="none"/>
<text x="432.56" y="612.56" fill="#000" font-family="sans-serif" font-size="10.55" text-anchor="middle" dominant-baseline="central">S/CO</text>
</g>
<g class="smoke-detector">
<circle cx="332.09" cy="311.16" r="11.72" stroke="#000" stroke-width="0.3mm" fill="none"/>
<text x="332.09" y="311.16" fill="#000" font-family="sans-serif" font-size="10.55" text-anchor="middle" dominant-baseline="central">S/CO</text>
</g>
</g>
</g>
<g class="layer-title-block">
<g class="title-block" font-family="'Helvetica','Arial',sans-serif" fill="#000">
<rect x="830" y="1251.63" width="350" height="140" stroke="#000" stroke-width="0.50" fill="white"/>
<line x1="830" y1="1341.63" x2="1180" y2="1341.63" stroke="#000" stroke-width="0.35"/>
<text x="842" y="1275.63" font-size="18" font-weight="bold">Small Two-Bedroom House</text>
<text x="842" y="1297.63" font-size="13">456 Oak Avenue, Anytown, ST 12345</text>
<text x="842" y="1317.63" font-size="13">John Doe</text>
<text x="842" y="1361.63" font-size="12">Sheet: A1</text>
<text x="1015" y="1361.63" font-size="12">Date: 2026-02-13</text>
<text x="842" y="1379.63" font-size="12">Scale: 1/4in = 1ft</text>
<text x="1015" y="1379.63" fill="#666" font-size="10">FloorScript v0.1</text>
</g>
</g>
</svg>"
`;

exports[`visual regression > renders consistently with options disabled 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 1036.98" width="1200" height="1036.98">
<rect x="0" y="0" width="1200" height="1036.98" fill="white"/>
<g class="layer-structural">
<g class="walls">
<rect x="163.02" y="163.02" width="873.96" height="29.43" stroke="none" fill="#000"/>
<rect x="163.02" y="844.53" width="873.96" height="29.43" stroke="none" fill="#000"/>
<g fill="#000" stroke="none">
<rect x="1007.55" y="681.51" width="29.43" height="163.02"/>
<rect x="1007.55" y="192.45" width="29.43" height="163.02"/>
</g>
<g fill="#000" stroke="none">
<rect x="163.02" y="627.17" width="29.43" height="217.36"/>
<rect x="163.02" y="192.45" width="29.43" height="271.7"/>
</g>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="1014.91" y1="681.51" x2="1014.91" y2="355.47"/>
<line x1="1029.62" y1="681.51" x2="1029.62" y2="355.47"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="163.02" y1="464.15" x2="326.04" y2="464.15"/>
<path d="M 326.04,464.15 A 163.02,163.02 0 0,1 163.02,627.17"/>
</g>
</g>
</svg>"
`;

exports[`visual regression > single-room renders consistently 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 1196.98" width="1200" height="1196.98">
<rect x="0" y="0" width="1200" height="1196.98" fill="white"/>
<g class="layer-structural">
<g class="walls">
<rect x="163.02" y="163.02" width="873.96" height="29.43" stroke="none" fill="#000"/>
<rect x="163.02" y="844.53" width="873.96" height="29.43" stroke="none" fill="#000"/>
<g fill="#000" stroke="none">
<rect x="1007.55" y="681.51" width="29.43" height="163.02"/>
<rect x="1007.55" y="192.45" width="29.43" height="163.02"/>
</g>
<g fill="#000" stroke="none">
<rect x="163.02" y="627.17" width="29.43" height="217.36"/>
<rect x="163.02" y="192.45" width="29.43" height="271.7"/>
</g>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="1014.91" y1="681.51" x2="1014.91" y2="355.47"/>
<line x1="1029.62" y1="681.51" x2="1029.62" y2="355.47"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="163.02" y1="464.15" x2="326.04" y2="464.15"/>
<path d="M 326.04,464.15 A 163.02,163.02 0 0,1 163.02,627.17"/>
</g>
</g>
<g class="layer-labels">
<text x="600" y="518.49" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="27.17" font-weight="500" text-anchor="middle" dominant-baseline="central">Living Room</text>
</g>
<g class="layer-dimensions">
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="192.45" y1="953.21" x2="1007.55" y2="953.21"/>
<line x1="184.3" y1="961.36" x2="200.6" y2="945.06"/>
<line x1="999.4" y1="961.36" x2="1015.7" y2="945.06"/>
<text x="600" y="939.62" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="19.02" text-anchor="middle">15&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="83.77" y1="844.53" x2="83.77" y2="192.45"/>
<line x1="75.62" y1="852.68" x2="91.92" y2="836.38"/>
<line x1="75.62" y1="200.6" x2="91.92" y2="184.3"/>
<text x="70.19" y="518.49" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="19.02" text-anchor="middle" transform="rotate(-90, 70.19, 518.49)">12&apos;-0&quot;</text>
</g>
</g>
<g class="layer-title-block">
<g class="title-block" font-family="'Helvetica','Arial',sans-serif" fill="#000">
<rect x="830" y="1036.98" width="350" height="140" stroke="#000" stroke-width="0.50" fill="white"/>
<line x1="830" y1="1126.98" x2="1180" y2="1126.98" stroke="#000" stroke-width="0.35"/>
<text x="842" y="1060.98" font-size="18" font-weight="bold">Single Room</text>
<text x="842" y="1164.98" font-size="12">Scale: 1/4in = 1ft</text>
<text x="1015" y="1164.98" fill="#666" font-size="10">FloorScript v0.1</text>
</g>
</g>
</svg>"
`;

exports[`visual regression > single-room renders consistently at different widths 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 600 598.49" width="600" height="598.49">
<rect x="0" y="0" width="600" height="598.49" fill="white"/>
<g class="layer-structural">
<g class="walls">
<rect x="81.51" y="81.51" width="436.98" height="14.72" stroke="none" fill="#000"/>
<rect x="81.51" y="422.26" width="436.98" height="14.72" stroke="none" fill="#000"/>
<g fill="#000" stroke="none">
<rect x="503.77" y="340.75" width="14.72" height="81.51"/>
<rect x="503.77" y="96.23" width="14.72" height="81.51"/>
</g>
<g fill="#000" stroke="none">
<rect x="81.51" y="313.58" width="14.72" height="108.68"/>
<rect x="81.51" y="96.23" width="14.72" height="135.85"/>
</g>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="507.45" y1="340.75" x2="507.45" y2="177.74"/>
<line x1="514.81" y1="340.75" x2="514.81" y2="177.74"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="81.51" y1="232.08" x2="163.02" y2="232.08"/>
<path d="M 163.02,232.08 A 81.51,81.51 0 0,1 81.51,313.58"/>
</g>
</g>
<g class="layer-labels">
<text x="300" y="259.25" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="13.58" font-weight="500" text-anchor="middle" dominant-baseline="central">Living Room</text>
</g>
<g class="layer-dimensions">
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="96.23" y1="476.6" x2="503.77" y2="476.6"/>
<line x1="92.15" y1="480.68" x2="100.3" y2="472.53"/>
<line x1="499.7" y1="480.68" x2="507.85" y2="472.53"/>
<text x="300" y="469.81" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="9.51" text-anchor="middle">15&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="41.89" y1="422.26" x2="41.89" y2="96.23"/>
<line x1="37.81" y1="426.34" x2="45.96" y2="418.19"/>
<line x1="37.81" y1="100.3" x2="45.96" y2="92.15"/>
<text x="35.09" y="259.25" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="9.51" text-anchor="middle" transform="rotate(-90, 35.09, 259.25)">12&apos;-0&quot;</text>
</g>
</g>
<g class="layer-title-block">
<g class="title-block" font-family="'Helvetica','Arial',sans-serif" fill="#000">
<rect x="415" y="518.49" width="175" height="70" stroke="#000" stroke-width="0.25" fill="white"/>
<line x1="415" y1="563.49" x2="590" y2="563.49" stroke="#000" stroke-width="0.17"/>
<text x="421" y="530.49" font-size="9" font-weight="bold">Single Room</text>
<text x="421" y="582.49" font-size="6">Scale: 1/4in = 1ft</text>
<text x="507.5" y="582.49" fill="#666" font-size="5">FloorScript v0.1</text>
</g>
</g>
</svg>"
`;

exports[`visual regression > single-room renders consistently at different widths 2`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2400 2393.96" width="2400" height="2393.96">
<rect x="0" y="0" width="2400" height="2393.96" fill="white"/>
<g class="layer-structural">
<g class="walls">
<rect x="326.04" y="326.04" width="1747.92" height="58.87" stroke="none" fill="#000"/>
<rect x="326.04" y="1689.06" width="1747.92" height="58.87" stroke="none" fill="#000"/>
<g fill="#000" stroke="none">
<rect x="2015.09" y="1363.02" width="58.87" height="326.04"/>
<rect x="2015.09" y="384.91" width="58.87" height="326.04"/>
</g>
<g fill="#000" stroke="none">
<rect x="326.04" y="1254.34" width="58.87" height="434.72"/>
<rect x="326.04" y="384.91" width="58.87" height="543.4"/>
</g>
</g>
<g class="opening window" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="2029.81" y1="1363.02" x2="2029.81" y2="710.94"/>
<line x1="2059.25" y1="1363.02" x2="2059.25" y2="710.94"/>
</g>
<g class="opening door" stroke="#000" stroke-width="0.35mm" fill="none">
<line x1="326.04" y1="928.3" x2="652.08" y2="928.3"/>
<path d="M 652.08,928.3 A 326.04,326.04 0 0,1 326.04,1254.34"/>
</g>
</g>
<g class="layer-labels">
<text x="1200" y="1036.98" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="54.34" font-weight="500" text-anchor="middle" dominant-baseline="central">Living Room</text>
</g>
<g class="layer-dimensions">
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="384.91" y1="1906.42" x2="2015.09" y2="1906.42"/>
<line x1="368.6" y1="1922.72" x2="401.21" y2="1890.11"/>
<line x1="1998.79" y1="1922.72" x2="2031.4" y2="1890.11"/>
<text x="1200" y="1879.25" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="38.04" text-anchor="middle">15&apos;-0&quot;</text>
</g>
<g class="dimension" stroke="#555" stroke-width="0.18mm">
<line x1="167.55" y1="1689.06" x2="167.55" y2="384.91"/>
<line x1="151.25" y1="1705.36" x2="183.85" y2="1672.75"/>
<line x1="151.25" y1="401.21" x2="183.85" y2="368.6"/>
<text x="140.38" y="1036.98" stroke="none" fill="#000" font-family="'Helvetica','Arial',sans-serif" font-size="38.04" text-anchor="middle" transform="rotate(-90, 140.38, 1036.98)">12&apos;-0&quot;</text>
</g>
</g>
<g class="layer-title-block">
<g class="title-block" font-family="'Helvetica','Arial',sans-serif" fill="#000">
<rect x="1660" y="2073.96" width="700" height="280" stroke="#000" stroke-width="1.00" fill="white"/>
<line x1="1660" y1="2253.96" x2="2360" y2="2253.96" stroke="#000" stroke-width="0.70"/>
<text x="1684" y="2121.96" font-size="36" font-weight="bold">Single Room</text>
<text x="1684" y="2329.96" font-size="24">Scale: 1/4in = 1ft</text>
<text x="2030" y="2329.96" fill="#666" font-size="20">FloorScript v0.1</text>
</g>
</g>
</svg>"
`;
